--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -37,25 +37,27 @@
 
         <ImageButton
             android:id="@+id/notifs_btn"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_toStartOf="@id/inbox_btn"
             android:layout_centerVertical="true"
             android:layout_marginEnd="12dp"
             android:background="@android:color/transparent"
             android:padding="0dp"
+            android:contentDescription="Notifications"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_notifications" />
 
         <ImageButton
             android:id="@+id/inbox_btn"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="16dp"
             android:background="@android:color/transparent"
             android:padding="0dp"
+            android:contentDescription="Inbox"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_inbox" />
 
