--- a/app/src/main/res/drawable/round_corners_yellow.xml
+++ b/app/src/main/res/drawable/round_corners_yellow.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/pawty_teal"/>
+    <solid android:color="@color/pawty_light_yellow"/>
     <corners android:radius="30dp" />
 </shape>
