--- a/app/src/main/res/layout/pets_default_spinner.xml
+++ b/app/src/main/res/layout/pets_default_spinner.xml
@@ -7,5 +7,7 @@
     android:text="pet1"
     android:textSize="16dp"
     android:gravity="center_vertical"
+    android:textAlignment="center"
     android:singleLine="true"
+    android:background="@color/pawty_teal"
     />
