--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -362,16 +362,36 @@
 
 
 
-        <Button
-            android:id="@+id/edit_profile_save_changes"
-            android:layout_width="180dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
-            android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/pawty_yellow"
-           android:layout_marginTop="20dp"
-            android:text="Save"
-            android:textColor="@color/pt_black" />
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="30dp">
+
+            <Button
+                android:id="@+id/btn_edit_profile_back"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/pawty_yellow"
+                android:text="Back"
+                android:textColor="@color/pawty_grey" />
+
+            <View
+                android:layout_width="16dp"
+                android:layout_height="1dp" />
+
+            <Button
+                android:id="@+id/edit_profile_save_changes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/pawty_yellow"
+                android:text="Save"
+                android:textColor="@color/pawty_grey" />
+        </LinearLayout>
     </LinearLayout>
 
     </ScrollView>
