updated interested and going counts

--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -232,7 +232,7 @@
                                 android:gravity="center_horizontal"
                                 android:orientation="vertical">
 
-                                <ImageButton
+                                <ImageView
                                     android:id="@+id/ivHostAvatar"
                                     android:layout_width="150dp"
                                     android:layout_height="150dp"
