--- a/app/src/main/res/layout/fragment_events_screen.xml
+++ b/app/src/main/res/layout/fragment_events_screen.xml
@@ -71,7 +71,7 @@
                                 android:paddingEnd="8dp"
                                 android:paddingBottom="8dp"
                                 android:singleLine="true"
-                                android:text="@string/hint_search"
+                                android:text="@string/hint_search_zip"
                                 android:textColor="@color/pawty_text_secondary"
                                 android:fontFamily="@font/marcellus"
                                 android:textSize="16sp"
