mini commi- worked on a few features pet profile view and different profiles

--- a/app/src/main/res/layout/fragment_pet_profile_view.xml
+++ b/app/src/main/res/layout/fragment_pet_profile_view.xml
@@ -62,16 +62,23 @@
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="MissingConstraints" />
             </LinearLayout>
-
+<ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <Spinner
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_gravity="right"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="60dp"
+                    android:layout_marginTop="40dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -371,6 +378,7 @@ chase, fetch, peanut butter\n"
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+</ScrollView>
         </LinearLayout>
 
 
